feat(db): Добавить сидер для таблиц.
Добавить файл сидера для заполнения стартовыми значениями таблиц
